<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2wifibot</name>
  <version>0.0.0</version>
  <description>
    ROS2 Driver for Wifibot lab mobile robot.
    It is based on low-level "libwifibot" driver, wrapped within this ROS2 package.
    This package is a fork of the original "roswifibot" package, available on SourceForge.
    The fork has been ported to ament and maintained with recent versions of ROS2.
  </description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dépendances ROS2 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rosidl_default_generators</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
